Update start_batch.sh